--- a/examples/configuration-by-provider.html
+++ b/examples/configuration-by-provider.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>jquery-oembed configuration by provider example</title>
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>  
-	<script type="text/javascript" src="jquery.oembed.js"></script>
+	<script type="text/javascript" src="../jquery.oembed.js"></script>
 </head>
 <body>
 <script type="text/javascript">
