--- a/jquery-1.4-example.html
+++ b/jquery-1.4-example.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title>screenr example</title>
+	<title>jquery-oembed explicit insert example</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8"/>    
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>  
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>  
 	<script type="text/javascript" src="jquery.oembed.js"></script>
 </head>
 <body>
-<script type="text/javascript">	
+<script type="text/javascript">
 	$(document).ready(function() {
-		$(".oembed").oembed();
+		$("#container").oembed("http://www.flickr.com/photos/14516334@N00/345009210/");
 	});
 </script>
-<a href="http://screenr.com/oXs" class="oembed">Screenr screencast on an iPhone</a>
+<div id="container"></div>
 </body>
 </html>
