--- a/examples/callback.html
+++ b/examples/callback.html
@@ -9,10 +9,11 @@
 <body>
 <script type="text/javascript">
 	$(document).ready(function() {
-		$(".oembed").oembed(null, null, function(container, oembed) {
+		$(".oembed").oembed(null, null, function(container, oembed, provider) {
 			container
 				.hide()
 				.after("<table><tr><td>" + oembed.code + "</td><td>" + oembed.code + "</tr></table>");
+			alert(provider.name);
 		});
 	});
 </script>
